# bsky-vita

./: .gitignore  Cargo.toml  Makefile  README.md  credentials.toml.example  rust-toolchain.toml
app/: Cargo.toml
app/.cargo/: config.toml
app/src/: main.rs
app/static/: video_yuv_f.gxp  video_yuv_v.gxp
app/static/sce_sys/livearea/contents/: template.xml
broker/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
broker/src/: index.ts
crates/bsky-auth/: Cargo.toml
crates/bsky-auth/src/: client.rs  credentials.rs  lib.rs  resolver.rs  store.rs  xrpc.rs
crates/bsky-ime/: Cargo.toml
crates/bsky-ime/src/: lib.rs
crates/bsky-input/: Cargo.toml
crates/bsky-input/src/: lib.rs
crates/bsky-log/: Cargo.toml
crates/bsky-log/src/: lib.rs
crates/bsky-media/: Cargo.toml  build.rs
crates/bsky-media/src/: camera.rs  fs.rs  image.rs  jpeg.rs  lib.rs
crates/bsky-models/: Cargo.toml
crates/bsky-models/src/: lib.rs
crates/bsky-net/: Cargo.toml
crates/bsky-net/src/: lib.rs
crates/bsky-oauth/: Cargo.toml
crates/bsky-oauth/src/: atomic_json.rs  broker.rs  client.rs  lib.rs  session_store.rs
crates/bsky-render/: Cargo.toml  build.rs
crates/bsky-render/src/: emoji_table.rs  ffi.rs  lib.rs  video_shader.rs  video_shader_src.rs
crates/bsky-store/: Cargo.toml
crates/bsky-store/src/: lib.rs
crates/bsky-ui/: Cargo.toml
crates/bsky-ui/src/: camera.rs  cdn.rs  compose.rs  conversation.rs  conversations.rs  embeds.rs  file_picker.rs  hints.rs  image_viewer.rs  imgutil.rs  lib.rs  login.rs  notifications.rs  profile.rs  screen.rs  search.rs  tabbar.rs  thread.rs  timeline.rs  video_player.rs  widget.rs
crates/bsky-video/: Cargo.toml
crates/bsky-video/src/: lib.rs
crates/bsky-worker/: Cargo.toml
crates/bsky-worker/src/: lib.rs
docs/: .gitkeep
static-site/: README.md
static-site/bsky-vita/: client_metadata.json
static-site/bsky-vita/callback/: index.html
static-site/bsky-vita/callback-qr/: index.html
tools/: build-avatar-mask.py  build-twemoji.py
