[package]
name = "bsky-vita-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bluesky (AT Protocol) homebrew client for PlayStation Vita"

[package.metadata.vita]
title_id = "BSKY00001"
title_name = "BskyVita"
build_std = "std,panic_unwind"
# Assets directory: contents mirror the VPK layout. So `static/sce_sys/icon0.png`
# is packed as `sce_sys/icon0.png` in the VPK.
assets = "static"
# vita-mksfoex flags default to ATTRIBUTE2=12 (bumps MAIN heap budget to 365 MiB),
# inherited from cargo-vita defaults. Override via `vita_mksfoex_flags = [...]` if needed.

[dependencies]
vitasdk-sys = { workspace = true }
vita-newlib-shims = { workspace = true }

# Phase 1 stack
bsky-net    = { path = "../crates/bsky-net" }
bsky-auth   = { path = "../crates/bsky-auth" }
bsky-models = { path = "../crates/bsky-models" }
atrium-api  = { workspace = true }
serde_json  = { workspace = true }
futures     = { workspace = true }

# Phase 2.1+: render + input + IME + UI scaffolding.
bsky-render = { path = "../crates/bsky-render" }
bsky-input  = { path = "../crates/bsky-input" }
bsky-ime    = { path = "../crates/bsky-ime" }
bsky-ui     = { path = "../crates/bsky-ui" }

# Phase 3.1: worker thread for non-blocking PDS calls.
bsky-worker = { path = "../crates/bsky-worker" }

[[bin]]
name = "bsky-vita"
path = "src/main.rs"
