[package]
name = "bsky-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AT Protocol OAuth (PAR+PKCE+DPoP) for the Vita; wraps atrium-oauth with VitaHttpClient and a file-backed session store"

[dependencies]
bsky-log        = { path = "../bsky-log" }
bsky-net        = { path = "../bsky-net" }
atrium-api      = { workspace = true }
atrium-xrpc     = { workspace = true }
atrium-identity = { workspace = true }
atrium-oauth    = { workspace = true }
atrium-common   = "0.1"
futures         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
ureq            = { workspace = true }

[dev-dependencies]
tempfile = "3"
