[package]
name = "bsky-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "vita2d FFI wrapper, frame primitives, font (PGF) rendering — Vita-only"
build = "build.rs"

# vitasdk-sys is only pulled when targeting Vita. On host, this crate
# compiles to empty stubs — its tests aren't useful but the workspace
# still builds without VITASDK present.
[dependencies]
bsky-log = { path = "../bsky-log" }
# Phase 11.5: pure-Rust QR encoder. default-features=false drops the
# `image` + `svg` + `pic` features we don't need (we render to a flat
# RGBA buffer via `to_vec()` directly).
qrcode = { workspace = true }

[target.'cfg(target_os = "vita")'.dependencies]
vitasdk-sys = { workspace = true }
