[package]
name = "bsky-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Immediate-mode widget tree + screens (Login, Profile, ...) — Vita-only at the FFI edges"

[dependencies]
bsky-render = { path = "../bsky-render" }
bsky-input  = { path = "../bsky-input" }
bsky-ime    = { path = "../bsky-ime" }
bsky-auth   = { path = "../bsky-auth" }
bsky-worker = { path = "../bsky-worker" }
atrium-api  = { workspace = true }
futures     = { workspace = true }
