[package]
name = "bsky-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Immediate-mode widget tree + screens (Login, Profile, ...) — Vita-only at the FFI edges"

[dependencies]
bsky-render = { path = "../bsky-render" }
bsky-input  = { path = "../bsky-input" }
bsky-ime    = { path = "../bsky-ime" }
bsky-auth   = { path = "../bsky-auth" }
bsky-oauth  = { path = "../bsky-oauth" }
bsky-worker = { path = "../bsky-worker" }
bsky-video  = { path = "../bsky-video" }
bsky-media  = { path = "../bsky-media" }
bsky-log    = { path = "../bsky-log" }
atrium-api  = { workspace = true }
futures     = { workspace = true }
